--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.5",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "next": "13.2.4",
-    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
-    "react-syntax-highlighter": "^15.5.0",
-    "typescript": "5.0.2"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.6"
+    "@types/node": "18.15.5",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "typescript": "5.0.2"
   }
 }
